# aetherya-core

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
audit/: decisions.jsonl
config/: policy.yaml
docs/: api.md  architecture.md  index.md  integrations.md  output-gate.md  parser-and-input-boundary.md  policy-model.md  release-and-verification.md  security-model.md  testing-and-benchmarks.md
examples/: agent_integration.py  basic_tool_wrapper.py  policy.minimal.yaml
scripts/: openai_shadow_smoke.py  pipeline_memory_soak.py  pre_api_gate.py
src/aetherya/: actions.py  api.py  api_server.py  approval_proof.py  approvals_server.py  audit.py  audit_divergence.py  audit_verify.py  capability_gate.py  chaos_benchmark.py  cli.py  config.py  confirmation_gate.py  constitution.py  decision_server.py  execution_gate.py  explainability.py  explainability_render.py  explainability_report.py  jailbreak.py  llm_provider.py  modes.py  output_gate.py  parser.py  pipeline.py  pipeline_benchmark.py  policy_decision_adapter.py  policy_engine.py  procedural_guard.py  rate_limiter.py  risk.py  security_baseline.py  security_gate.py  verify_release_artifacts.py
src/aetherya.egg-info/: SOURCES.txt
tests/: conftest.py  test_actions_contract.py  test_api.py  test_api_server.py  test_approval_proof.py  test_audit_chaos_bytes.py  test_audit_divergence.py  test_audit_integrity_stress.py  test_audit_logger.py  test_audit_tamper_campaign.py  test_audit_verify.py  test_capability_gate.py  test_chaos_benchmark.py  test_cli.py  test_config_regression.py  test_config_runtime_alignment.py  test_config_validation.py  test_confirmation_gate.py  test_constitution.py  test_decision_identity.py  test_decision_snapshot.py  test_execution_gate.py  test_explainability.py  test_explainability_render.py  test_explainability_report.py  test_jailbreak_guard.py  test_jailbreak_guard_stress.py  test_jailbreak_guard_unicode_multilang.py  test_llm_provider.py  test_output_gate.py  test_parser.py  test_pipeline_abi_contract.py  test_pipeline_audit_paths.py  test_pipeline_benchmark.py  test_pipeline_capability_gate.py  test_pipeline_confirmation_gate.py  test_pipeline_execution_gate.py  test_pipeline_explainability_paths.py  test_pipeline_fail_close.py  test_pipeline_llm_shadow.py  (+19 more)
tests/fixtures/security_baseline/v1/: stress_baseline.json
tests/fixtures/security_corpus/v1/: attack_decision_snapshots.json  benign_security_prompts.json  jailbreak_attacks.json
tests/snapshots/: rm_rf_decision.json
