[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E", "F", "I",   # pycodestyle/pyflakes/isort
  "B",             # bugbear
  "UP",            # pyupgrade
]
ignore = ["E501"]  # Black ya gestiona line-length

[tool.ruff.lint.isort]
known-first-party = ["aetherya"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
pretty = true
mypy_path = "src"
packages = ["aetherya"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: marks tests as slow (requires model download, use --run-slow to include)",
]

[tool.coverage.run]
branch = true
source = ["src/aetherya"]

[tool.coverage.report]
fail_under = 99
show_missing = true
skip_covered = true

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff==0.15.2",
  "black",
  "mypy",
  "pyyaml",
  "types-PyYAML",
  "pre-commit",
]
llm = [
  "openai>=1.0.0",
]
redis = [
  "redis>=5.0.0",
]

[project]
name = "aetherya-core"
version = "0.6.0"
dependencies = [
  "sentence-transformers>=2.7.0",
  "numpy>=1.26.0",
]

[project.scripts]
aetherya = "aetherya.cli:main"
aetherya-api = "aetherya.api_server:main"
aetherya-decision-server = "aetherya.decision_server:main"
aetherya-approvals-server = "aetherya.approvals_server:main"

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true
